# aegis

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json
.github/: FUNDING.yml
.sqlx/: query-0e8253acd958ef4d198afcf6debe6dd916209521f8e914c3d62c3cd1d5727b9a.json  query-19c2e0df7f109dd75d071071f0657729e06353baec7ecdf14867a6fe2bcdf516.json  query-1b837518eb8ed15566e3ff65aa9346861cde6ff2f95afb2f17a1d308b8472167.json  query-1f2bdaeade8693aa36cba3afb135ba605bec8d25fcefeb81eaa35223f3ceec7f.json  query-2d705ebefc187d751f1ba492fc3a4e42201aaec5112da73a25f9b4c928f10c1f.json  query-34a8b57618068dc43fd22a68b75d00501ea3c6defa682e230bb40246d99fbe07.json  query-35b2148400d7529f9b40578549d188ecd162f531690ac3df6caf6ea6c6f41172.json  query-40b644a7a6eaa2fff33f0367f2d5f6e8c3608dd94d9f6a2e0a734e7becac7f59.json  query-470ecff276d1b09f66b010480b22a4c0f5b171b691da69005e2ddc2162887ab6.json  query-4f064bc0d762dc5723712052920c23d0fbfa7df6804b727ab86b439db87437d2.json  query-553714e254efebbf869ea6029d2e320a619311e64f3ee23de3aed5a524995893.json  query-55a7528540678adade8d811b70c7662d60a193aad97b741c300f1e2100bad38e.json  query-5658892a795d82385a649f9cdbbc0dea4b2037e48e974005830dfdf0daa60436.json  query-5683ade339fa76a7dae1d26b55741e240d69c45e2e596c47bd8f584e501a27b6.json  query-5a135407b697bdacdf17eeb0902507b1fcf74581330a78b2b7ed9443d63acf68.json  query-6335c5b93b87513003f0e551ad6b60b3f666a92b64ed5d5a6b0f297cb306d7c7.json  query-65f0ae231ae8113755534679f22f487317849abc3b93e38159a1efeebc7a5fce.json  query-67412dcfda46a38692ba3525ea969cdf9272b94f5e9d928272cd8ed8c3577e91.json  query-6ae2cb0bc511e24335d887809612301601faf19ef1e248213bae99b4986fc139.json  query-782fcbf71b4df21d5bdeab81c9e75dd56d3520b0007f5c71efd2e7ad785fb79a.json  query-7a50ecbd01c61d87dc552e732b6b728df888e244da62ff98e76db5c397fb0523.json  query-7be5b8d4f7221a1fb5d308677dfe969d85062d067f8f7df2ad40af4d359d54f1.json  query-7be7e538e013c3b6b21fdcc9479910b3dae8dd667910cbd8881c4213666628ef.json  query-7e36c8fd06e58b46d0fc9b32bc43e6167e134609865f620a41773b4e4344b3e3.json  (+31 more)
(+199 files in other folders)
