[package]
name = "Ouroboros"
version = "0.1.0-pre"
edition = "2024"

[dependencies]
serde = "1.0.219"
serenity = { version = "0.12.4", features = ["chrono", "collector"] }
sysinfo = { version = "0.37.0", default-features = false, features = ["system"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ouroboros_macros = { path = "./ouroboros_macros" }
sqlx = { version = "0.8.6", features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "tls-native-tls"] }
chrono = "0.4.41"
reqwest = { version = "0.12.23", features = ["json"] }
zip = "2.4.2"
image = "0.25.6"
thiserror = "2.0.17"
tesseract-rs = { version = "0.1.20", features = ["build-tesseract"] }
regex = "1.12.2"
dhat = "0.3.3"
serde_json = "1.0.149"

[workspace]
members = ["ouroboros_macros"]
